[tool.poetry]
name = "xtwitch"
version = "0.0.1"
description = "async wrapper for twitch API"
authors = ["asomethings <asomethings@kakao.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.9.3"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
yapf = "^0.29.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
